Fixed the align-items

--- a/src/css/Post.css
+++ b/src/css/Post.css
@@ -64,12 +64,6 @@
     margin-bottom: 5px;
 }
 
-/* #text {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-} */
-
 .post__badge {
     font-size: 18px !important;
     color: var(--twitter-color);
@@ -100,11 +94,6 @@
     transform: scale(0.8);
 }
 
-p {
-    word-wrap: break-word;
-    white-space: pre-wrap;
-}
-
 .post__likeButton {
     display: flex;
     align-items: center;
@@ -122,7 +111,7 @@ p {
 
 .post__commentButton {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .post__commentCount {
